--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "workbench.colorCustomizations": {
-    "activityBar.background": "#15332A",
-    "titleBar.activeBackground": "#1E473B",
-    "titleBar.activeForeground": "#F5FBF9"
+    "activityBar.background": "#570948",
+    "titleBar.activeBackground": "#7A0D65",
+    "titleBar.activeForeground": "#FFFBFE"
   }
 }
