--- a/package.json
+++ b/package.json
@@ -6,12 +6,27 @@
   "scripts": {
     "test": "mocha -w"
   },
+  "eslintConfig": {
+    "root": true,
+    "extends": [
+      "eslint:recommended"
+    ],
+    "files": [
+      "**/*.js"
+    ],
+    "ignorePatterns": [
+      "node_modules/*"
+    ],
+    "rules": {
+      "semi": "error"
+    }
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "chai": "^4.3.6",
-    "eslint": "^8.23.1",
+    "eslint": "^8.24.0",
     "mocha": "^10.0.0",
     "prettier": "^2.7.1"
   }
